# cast-sender

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  clippy.yml  codespell.yml  rustfmt.yml
examples/: web_radio.rs
proto/: README.md
src/: app.rs  application.rs  client.rs  error.rs  lib.rs  media_controller.rs  namespace.rs  payload.rs  receiver.rs  shared.rs
src/namespace/: connection.rs  heartbeat.rs  media.rs  mod.rs  multizone.rs  receiver.rs
src/proto/: cast.rs  mod.rs
